@@ -2,6 +2,10 @@ yle-dl - download videos from Yle servers
 Copyright 2009-2025 Antti Ajanki
 Distributed under the GPL v3 or later
 
+<unreleased>
+
+- Try to fix subtitles when ffmpeg version is recognized
+
 Version 20250614
 
 - Include a thumbnail image URL in --showmetadata response
